apps/longhorn/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend-ingress
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-issuer"
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - longhorn.intern.devopsdungeon.net
    secretName: longhorn-frontend-tls
  rules:
  - host: longhorn.intern.devopsdungeon.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              name: http
